✨ Couverture TU i18n utils + exclusion dossier coverage

--- a/docs/tasks/i18n.md
+++ b/docs/tasks/i18n.md
@@ -441,12 +441,19 @@ export function useTranslatedPath(lang: string) {
 }
 ```
 
-### Phase 3 : Refactoring Composants (2 jours)
+### Phase 3 : Refactoring Composants (3-4 jours) - DIVISÉE EN ÉTAPES
 
-#### 3.1 Layout Principal (Révisé)
+**Approche** : Adaptation progressive du header existant en préservant 100% de la structure DaisyUI et des fonctionnalités actuelles.
+
+#### ⏳ 3.1 Adaptation Layout Principal - ÉTAPE 1 (0.5 jour)
+**Status** : ⏳ EN ATTENTE
+**Objectif** : Préparer MainLayout.astro pour recevoir les props de langue
+**Fichier à modifier** : `src/layouts/MainLayout.astro`
+
+**Changements MINIMAUX à effectuer** :
 ```astro
 ---
-// src/layouts/MainLayout.astro - Version i18n RÉVISÉE
+// src/layouts/MainLayout.astro - ADAPTATION PROGRESSIVE
 import { getLangFromUrl } from '../i18n/utils';
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
@@ -454,14 +461,14 @@ import Footer from "../components/Footer.astro";
 interface Props {
   title: string;
   description?: string;
-  lang?: string;
+  lang?: string;  // ✅ NOUVEAU : Prop optionnelle langue
 }
 
 const { title, description, lang } = Astro.props;
-const currentLang = lang || getLangFromUrl(Astro.url);
+const currentLang = lang || getLangFromUrl(Astro.url); // ✅ NOUVEAU : Détection automatique
 ---
 
-<html lang={currentLang}>
+<html lang={currentLang}>  <!-- ✅ MODIFIÉ : lang dynamique au lieu de "fr" -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -470,78 +477,222 @@ const currentLang = lang || getLangFromUrl(Astro.url);
     <title>{title}</title>
     {description && <meta name="description" content={description} />}
     <slot name="head" />
-    <script src="../scripts/stagewise.ts"></script>
+    <script src="../scripts/stagewise.ts"></script>  <!-- ✅ CONSERVÉ tel quel -->
   </head>
   <body>
-    <header>
-      <Header lang={currentLang} />
-    </header>
-    <main>
-      <slot />
-    </main>
-    <footer>
-      <Footer lang={currentLang} />
-    </footer>
+    <Header lang={currentLang} />  <!-- ✅ NOUVEAU : Passage de la langue -->
+    <slot />
+    <Footer />  <!-- ✅ CONSERVÉ tel quel pour l'instant -->
   </body>
 </html>
 ```
 
-#### 3.2 Header Internationalisé (Adaptation de l'existant)
+**Critères de validation 3.1** :
+- [ ] MainLayout.astro modifié sans casser l'existant
+- [ ] Prop `lang` optionnelle fonctionnelle
+- [ ] Détection automatique de langue opérationnelle
+- [ ] Script stagewise.ts toujours chargé
+- [ ] Build Astro sans erreurs
+- [ ] Tests existants toujours passent
+
+---
+
+#### ⏳ 3.2 Préparation Header - ÉTAPE 2 (0.5 jour)
+**Status** : ⏳ EN ATTENTE (après validation 3.1)
+**Objectif** : Ajouter les imports i18n SANS casser le header actuel
+**Fichier à modifier** : `src/components/Header.astro`
+
+**ÉTAPE PRÉPARATOIRE - Ajout des imports uniquement** :
 ```astro
 ---
-// src/components/Header.astro - ADAPTATION OPTIMISÉE de l'existant
+// src/components/Header.astro - PRÉPARATION PROGRESSIVE
 import { useTranslations, useTranslatedPath } from '../i18n/utils';
 
 interface Props {
-  lang: string;
+  lang?: string;  // ✅ NOUVEAU : Prop optionnelle (défaut: 'fr' comme avant)
 }
 
-const { lang } = Astro.props;
+const { lang = 'fr' } = Astro.props;  // ✅ NOUVEAU : Défaut 'fr' pour compatibilité
+
+// ✅ NOUVEAUX : Utilitaires i18n (pas encore utilisés)
 const t = useTranslations(lang);
 const translatePath = useTranslatedPath(lang);
 
-// RÉUTILISATION de votre structure existante
+// ✅ CONSERVÉ EXACTEMENT : Votre structure navLinks existante
 const navLinks = [
-  { href: "/", key: "nav.home" },
-  { href: "/about", key: "nav.about" },
-  { href: "/services", key: "nav.services" },
-  { href: "/contact", key: "nav.contact" },
+  { href: "/", label: "Accueil", labelEN: "Home" },
+  { href: "/about", label: "À propos", labelEN: "About" },
+  { href: "/services", label: "Services", labelEN: "Services" },
+  { href: "/contact", label: "Contact", labelEN: "Contact" },
 ];
 ---
 
-<!-- CONSERVATION de votre structure DaisyUI existante -->
-<div class="navbar bg-base-100">
-  <div class="navbar-start">
-    <!-- Votre logo/brand existant conservé -->
-  </div>
-  
-  <div class="navbar-center hidden lg:flex">
-    <ul class="menu menu-horizontal px-1">
+<!-- ✅ CONSERVÉ INTÉGRALEMENT : Votre HTML existant (539 lignes) -->
+<!-- Aucun changement dans le template pour cette étape -->
+<!-- L'objectif est de préparer sans casser -->
+```
+
+**Critères de validation 3.2** :
+- [ ] Header fonctionne exactement comme avant
+- [ ] Imports i18n ajoutés sans erreur
+- [ ] Props lang optionnelle définie
+- [ ] NavLinks structure conservée à 100%
+- [ ] Sélecteur de langue existant toujours fonctionnel
+- [ ] Toggle thème toujours opérationnel
+- [ ] Responsive design intact
+
+---
+
+#### ⏳ 3.3 Migration Navigation - ÉTAPE 3 (1 jour)
+**Status** : ⏳ EN ATTENTE (après validation 3.2)  
+**Objectif** : Remplacer le système label/labelEN par les traductions centralisées
+**Fichier à modifier** : `src/components/Header.astro`
+
+**MIGRATION PROGRESSIVE des links de navigation** :
+```astro
+---
+// src/components/Header.astro - MIGRATION NAVIGATION
+import { useTranslations, useTranslatedPath } from '../i18n/utils';
+
+interface Props {
+  lang?: string;
+}
+
+const { lang = 'fr' } = Astro.props;
+const t = useTranslations(lang);
+const translatePath = useTranslatedPath(lang);
+
+// ✅ MIGRATION : De label/labelEN vers clés de traduction
+const navLinks = [
+  { href: "/", key: "nav.home" },           // Remplace label/labelEN
+  { href: "/about", key: "nav.about" },     // Remplace label/labelEN  
+  { href: "/services", key: "nav.services" }, // Remplace label/labelEN
+  { href: "/contact", key: "nav.contact" }, // Remplace label/labelEN
+];
+---
+
+<!-- ✅ MIGRATION : Navigation desktop -->
+<div class="navbar-center hidden lg:flex">
+  <ul class="menu menu-horizontal px-1">
+    {navLinks.map((link) => (
+      <li>
+        <a href={translatePath(link.href)} class="nav-link">
+          {t(link.key)}  <!-- ✅ NOUVEAU : Traduction centralisée -->
+        </a>
+      </li>
+    ))}
+  </ul>
+</div>
+
+<!-- ✅ CONSERVÉ : Tout le reste de votre structure DaisyUI -->
+<!-- Sélecteur langue, toggle thème, menu mobile, etc. -->
+```
+
+**Critères de validation 3.3** :
+- [ ] Navigation desktop utilise les traductions centralisées
+- [ ] URLs générées avec translatePath() correctes
+- [ ] Changement de langue met à jour les libellés
+- [ ] Navigation mobile toujours fonctionnelle (inchangée temporairement)
+- [ ] Structure DaisyUI conservée
+- [ ] Responsive behavior intact
+
+---
+
+#### ⏳ 3.4 Migration Sélecteur Langue - ÉTAPE 4 (1 jour)
+**Status** : ⏳ EN ATTENTE (après validation 3.3)
+**Objectif** : Moderniser le sélecteur de langue avec routage Astro i18n
+**Fichier à modifier** : `src/components/Header.astro`
+
+**ADAPTATION du sélecteur existant** :
+```astro
+<!-- ✅ ADAPTATION : Votre dropdown existant avec nouvelles URLs -->
+<div class="dropdown dropdown-end">
+  <button class="btn btn-ghost btn-sm">
+    <span id="current-lang">{lang.toUpperCase()}</span>  <!-- ✅ DYNAMIQUE -->
+  </button>
+  <ul class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+    <!-- ✅ NOUVEAU : URLs Astro i18n au lieu de JavaScript -->
+    <li>
+      <a href={translatePath(Astro.url.pathname, 'en')} 
+         class={lang === 'en' ? 'active' : ''}>
+        🇺🇸 EN
+      </a>
+    </li>
+    <li>
+      <a href={translatePath(Astro.url.pathname, 'fr')}
+         class={lang === 'fr' ? 'active' : ''}>
+        🇫🇷 FR
+      </a>
+    </li>
+  </ul>
+</div>
+```
+
+**Critères de validation 3.4** :
+- [ ] Sélecteur langue utilise les URLs Astro i18n
+- [ ] Changement de langue redirige vers la page équivalente
+- [ ] Langue active visuellement indiquée
+- [ ] Transitions fluides entre langues
+- [ ] URLs préservent la page actuelle lors du changement
+- [ ] Fallback vers page d'accueil si traduction inexistante
+
+---
+
+#### ⏳ 3.5 Migration Menu Mobile - ÉTAPE 5 (1 jour)
+**Status** : ⏳ EN ATTENTE (après validation 3.4)
+**Objectif** : Adapter le menu mobile avec le nouveau système i18n
+**Fichier à modifier** : `src/components/Header.astro`
+
+**ADAPTATION du menu mobile existant** :
+```astro
+<!-- ✅ CONSERVATION de votre structure mobile existante -->
+<div class="navbar-start">
+  <div class="dropdown">
+    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+      <svg class="w-5 h-5" /* votre icône existante */ />
+    </div>
+    <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+      <!-- ✅ MIGRATION : Menu mobile avec traductions -->
       {navLinks.map((link) => (
         <li>
-          <a href={translatePath(link.href)} class="nav-link">
+          <a href={translatePath(link.href)}>
             {t(link.key)}
           </a>
         </li>
       ))}
+      <!-- ✅ CONSERVÉ : Sélecteur langue mobile si existant -->
     </ul>
-  </div>
-  
-  <div class="navbar-end">
-    <!-- ADAPTATION de votre sélecteur existant -->
-    <div class="dropdown dropdown-end">
-      <button class="btn btn-ghost btn-sm">
-        <span id="current-lang">{lang.toUpperCase()}</span>
-      </button>
-      <ul class="dropdown-content menu">
-        <li><a href={translatePath(Astro.url.pathname, 'en')}>🇺🇸 EN</a></li>
-        <li><a href={translatePath(Astro.url.pathname, 'fr')}>🇫🇷 FR</a></li>
-      </ul>
-    </div>
-    <!-- Votre toggle thème existant conservé -->
   </div>
 </div>
 ```
+
+**Critères de validation 3.5** :
+- [ ] Menu mobile utilise les traductions centralisées
+- [ ] Navigation mobile responsive conservée
+- [ ] Fermeture automatique après sélection
+- [ ] Cohérence visuelle avec version desktop
+- [ ] Sélecteur langue mobile fonctionnel
+
+---
+
+#### ⏳ 3.6 Finalisation et Tests - ÉTAPE 6 (0.5 jour)
+**Status** : ⏳ EN ATTENTE (après validation 3.5)
+**Objectif** : Tests complets et nettoyage du header adapté
+**Fichiers concernés** : Header, MainLayout, tests
+
+**NETTOYAGE FINAL** :
+- [ ] Suppression du code legacy (label/labelEN)
+- [ ] Optimisation des imports
+- [ ] Documentation des changements
+- [ ] Tests de régression complets
+
+**Critères de validation 3.6** :
+- [ ] Header 100% fonctionnel avec nouveau système i18n
+- [ ] Toutes les fonctionnalités existantes préservées
+- [ ] Performance équivalente ou améliorée  
+- [ ] Tests unitaires Header passés
+- [ ] Tests E2E navigation passés
+- [ ] Code nettoyé sans legacy
 
 ### Phase 4 : Pages et Contenu (2-3 jours)
 
@@ -672,16 +823,24 @@ const t = useTranslations('fr');
 ### Temps de Développement OPTIMISÉ
 | Phase | Durée Estimée | Complexité | Optimisation |
 |-------|---------------|------------|--------------|
-| Phase 1 : Configuration | 1-2 jours | ⭐⭐ | Header 90% prêt |
+| Phase 1 : Configuration | ✅ TERMINÉE | ⭐⭐ | Header 90% prêt |
 | Phase 2 : Traductions | 1-2 jours | ⭐⭐ | Structure existante |
-| Phase 3 : Refactoring | 2 jours | ⭐⭐ | Adaptation vs refonte |
+| **Phase 3 : Refactoring** | **3-4 jours** | **⭐⭐** | **6 étapes validables** |
+| └─ 3.1 Layout Principal | 0.5 jour | ⭐ | Changements minimaux |
+| └─ 3.2 Préparation Header | 0.5 jour | ⭐ | Imports seulement |
+| └─ 3.3 Migration Navigation | 1 jour | ⭐⭐ | Conservation structure |
+| └─ 3.4 Sélecteur Langue | 1 jour | ⭐⭐ | Adaptation dropdown |
+| └─ 3.5 Menu Mobile | 1 jour | ⭐⭐ | Responsive preserved |
+| └─ 3.6 Tests & Nettoyage | 0.5 jour | ⭐ | Validation finale |
 | Phase 4 : Contenu | 2-3 jours | ⭐⭐⭐ | |
-| **Total OPTIMISÉ** | **6-9 jours** | **⭐⭐** | **vs 9-13 jours initial** |
+| **Total OPTIMISÉ** | **7-10 jours** | **⭐⭐** | **Validation étape par étape** |
 
 ### Gains d'Efficacité Identifiés
-- **Header existant** : 539 lignes déjà écrites → -2 jours
-- **DaisyUI/Responsive** : Structure UI complète → -1 jour  
-- **TypeScript config** : Base solide existante → -1 jour
+- **Header existant** : 539 lignes déjà écrites → Adaptation progressive au lieu de refonte
+- **DaisyUI/Responsive** : Structure UI complète → Conservation à 100%
+- **TypeScript config** : Base solide existante → Types i18n automatiques
+- **Validation par étapes** : 6 étapes courtes → Réduction des risques
+- **Code legacy préservé** : Fonctionnalités existantes → Zéro régression
 
 ---
 
@@ -825,7 +984,15 @@ Le projet est un **cas d'école parfait** pour l'internationalisation Astro avec
 - ✅ Fallback anglais opérationnel
 
 ### Après Phase 2 → Phase 3 :
-**Refactoring des composants existants** (Header, Layout, Footer) pour utiliser le nouveau système de traduction.
+**Adaptation progressive des composants existants** en 6 étapes validables :
+1. **3.1** Layout Principal (0.5j) - Props langue + détection auto
+2. **3.2** Préparation Header (0.5j) - Imports i18n SANS casser l'existant
+3. **3.3** Migration Navigation (1j) - Traductions centralisées desktop
+4. **3.4** Sélecteur Langue (1j) - URLs Astro au lieu de JavaScript
+5. **3.5** Menu Mobile (1j) - Adaptation responsive complète
+6. **3.6** Tests & Nettoyage (0.5j) - Validation finale + suppression legacy
+
+**🎯 AVANTAGE** : Chaque étape est validée avant de passer à la suivante, garantissant **zéro régression** et **préservation à 100%** des fonctionnalités existantes.
 
 ---
 
@@ -834,7 +1001,13 @@ Le projet est un **cas d'école parfait** pour l'internationalisation Astro avec
 ### Progression Globale : 40% ✅
 - **Phase 1** : ✅ 100% (Configuration + Contenu)
 - **Phase 2** : ⏳ 0% (Traductions)
-- **Phase 3** : ⏳ 0% (Refactoring composants)
+- **Phase 3** : ⏳ 0% (Adaptation composants - 6 étapes)
+  - 3.1 Layout Principal : ⏳ 0%
+  - 3.2 Préparation Header : ⏳ 0%
+  - 3.3 Migration Navigation : ⏳ 0%
+  - 3.4 Sélecteur Langue : ⏳ 0%
+  - 3.5 Menu Mobile : ⏳ 0%
+  - 3.6 Tests & Nettoyage : ⏳ 0%
 - **Phase 4** : ⏳ 0% (Pages et routage)
 
 ### Tests Passés : 10/10 ✅
@@ -843,11 +1016,19 @@ Le projet est un **cas d'école parfait** pour l'internationalisation Astro avec
 - **Tests composants** : 0/0 ⏳ (à créer)
 - **Tests E2E** : 0/0 ⏳ (à créer)
 
-### Fichiers Créés : 6/15+ 
+### Fichiers Créés : 6/20+ 
 - **Configuration** : 1/1 ✅ (`astro.config.mjs`)
 - **Contenu** : 5/5 ✅ (config + 4 articles)
 - **i18n** : 0/2 ⏳ (`ui.ts`, `utils.ts`)
-- **Composants** : 0/3 ⏳ (Header, Layout, Footer adaptés)
-- **Pages** : 0/4+ ⏳ (index, blog, pages FR)
+- **Composants** : 0/2 ⏳ (Header adapté, Layout adapté)
+- **Tests** : 1/3 ⏳ (content ✅, i18n ⏳, composants ⏳)
+- **Pages** : 0/6+ ⏳ (index EN/FR, blog EN/FR, autres pages)
 
 **Prêt pour Phase 2 ! 🎯**
+
+### Approche Progressive Phase 3
+**🔄 Méthodologie** : Chaque étape de la Phase 3 **préserve 100%** des fonctionnalités existantes
+- **Pas de refonte** → **Adaptation douce**
+- **Header 539 lignes conservées** → **Ajouts minimaux**
+- **DaisyUI structure intacte** → **Props et traductions ajoutées**
+- **Validation après chaque étape** → **Zéro risque de régression**
