:sparkles: Affichage des articles sur la page d'accueil

--- a/src/content/blog/en/astro-guide.mdx
+++ b/src/content/blog/en/astro-guide.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Getting Started with Astro"
-description: "A comprehensive guide to building fast, modern websites with Astro framework."
-pubDate: 2024-01-20
-author: "Tech Team"
+title: "Astro Guide: Modern Framework for Static Sites"
+description: "Discover Astro, the revolutionary framework for creating ultra-fast websites with less JavaScript."
+pubDate: 2024-01-30
+author: "Emma Leroy"
 lang: "en"
-translationId: "astro-guide"
-canonicalSlug: "getting-started-with-astro"
-heroImage: "/images/astro-hero.jpg"
+translationId: "550e8400-e29b-41d4-a716-446655440008"
+canonicalSlug: "astro-guide"
+heroImage: "https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # Getting Started with Astro
