--- a/src/content/blog/en/first-post.mdx
+++ b/src/content/blog/en/first-post.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Welcome to Our Blog"
-description: "This is our first blog post in English. Learn about our journey and what's coming next."
+description: "Here's our first blog post in English. Discover our journey and what's coming next."
 pubDate: 2024-01-15
 author: "Blog Team"
 lang: "en"
-translationId: "welcome-post"
+translationId: "550e8400-e29b-41d4-a716-446655440007"
 canonicalSlug: "welcome-to-our-blog"
-heroImage: "/images/welcome-hero.jpg"
+heroImage: "https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # Welcome to Our Blog
