--- a/src/content/blog/en/rest-api-best-practices-guide.mdx
+++ b/src/content/blog/en/rest-api-best-practices-guide.mdx
@@ -1,12 +1,12 @@
 ---
-title: "REST APIs: Best Practices Guide for Developers"
-description: "Master the best practices for designing robust, secure, and easily maintainable REST APIs."
-pubDate: 2024-02-10
-author: "Thomas Rousseau"
+title: "REST API: Best Practices and Modern Patterns"
+description: "Complete guide to best practices for designing robust, secure and maintainable REST APIs."
+pubDate: 2024-02-20
+author: "Pierre Moreau"
 lang: "en"
-translationId: "rest-api-best-practices"
+translationId: "550e8400-e29b-41d4-a716-446655440005"
 canonicalSlug: "rest-api-best-practices-guide"
-heroImage: "/images/rest-api-practices.jpg"
+heroImage: "https://images.unsplash.com/photo-1518186285589-2f7649de83e0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # REST APIs: Best Practices Guide for Developers
