--- a/src/content/blog/fr/guide-astro.mdx
+++ b/src/content/blog/fr/guide-astro.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Débuter avec Astro"
-description: "Un guide complet pour construire des sites web rapides et modernes avec le framework Astro."
-pubDate: 2024-01-20
-author: "Équipe Tech"
+title: "Guide Astro : Framework Moderne pour Sites Statiques"
+description: "Découvrez Astro, le framework révolutionnaire pour créer des sites web ultra-rapides avec moins de JavaScript."
+pubDate: 2024-01-30
+author: "Emma Leroy"
 lang: "fr"
-translationId: "astro-guide"
-canonicalSlug: "debuter-avec-astro"
-heroImage: "/images/astro-hero.jpg"
+translationId: "550e8400-e29b-41d4-a716-446655440008"
+canonicalSlug: "guide-astro"
+heroImage: "https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # Débuter avec Astro
