--- a/src/content/blog/fr/premier-article.mdx
+++ b/src/content/blog/fr/premier-article.mdx
@@ -4,9 +4,9 @@ description: "Voici notre premier article de blog en français. Découvrez notre
 pubDate: 2024-01-15
 author: "Équipe Blog"
 lang: "fr"
-translationId: "welcome-post"
+translationId: "550e8400-e29b-41d4-a716-446655440007"
 canonicalSlug: "bienvenue-sur-notre-blog"
-heroImage: "/images/welcome-hero.jpg"
+heroImage: "https://images.unsplash.com/photo-1499750310107-5fef28a66643?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # Bienvenue sur Notre Blog
