--- a/src/content/blog/fr/typescript-pour-debutants.mdx
+++ b/src/content/blog/fr/typescript-pour-debutants.mdx
@@ -1,12 +1,12 @@
 ---
-title: "TypeScript pour Débutants : Un Guide Complet"
-description: "Découvrez TypeScript, ses avantages et comment commencer à l'utiliser dans vos projets JavaScript."
+title: "TypeScript pour Débutants : Guide Complet"
+description: "Découvrez TypeScript, le superset de JavaScript qui transforme votre expérience de développement. Guide complet pour bien commencer."
 pubDate: 2024-01-20
-author: "Sarah Dubois"
+author: "Alex Dupont"
 lang: "fr"
-translationId: "typescript-beginners"
+translationId: "550e8400-e29b-41d4-a716-446655440001"
 canonicalSlug: "typescript-pour-debutants"
-heroImage: "/images/typescript-hero.jpg"
+heroImage: "https://images.unsplash.com/photo-1516116216624-53e697fedbea?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # TypeScript pour Débutants : Un Guide Complet
