--- a/src/content/blog/en/css-grid-comprehensive-guide.mdx
+++ b/src/content/blog/en/css-grid-comprehensive-guide.mdx
@@ -4,9 +4,9 @@ description: "Learn to create complex and responsive layouts with CSS Grid. Comp
 pubDate: 2024-02-15
 author: "Sophie Bernard"
 lang: "en"
-translationId: "css-grid-layout-guide"
+translationId: "550e8400-e29b-41d4-a716-446655440002"
 canonicalSlug: "css-grid-comprehensive-guide"
-heroImage: "/images/css-grid-layout.jpg"
+heroImage: "https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # Mastering CSS Grid Layout: Complete Guide with Practical Examples
