--- a/src/content/blog/en/web-performance-optimization-techniques.mdx
+++ b/src/content/blog/en/web-performance-optimization-techniques.mdx
@@ -1,12 +1,12 @@
 ---
-title: "10 Web Performance Optimization Techniques in 2024"
+title: "Web Performance Optimization: Techniques and Best Practices"
 description: "Discover the best techniques to optimize your website performance and improve user experience."
-pubDate: 2024-02-01
-author: "Léa Martin"
+pubDate: 2024-02-10
+author: "Marc Leblanc"
 lang: "en"
-translationId: "web-performance-optimization"
+translationId: "550e8400-e29b-41d4-a716-446655440003"
 canonicalSlug: "web-performance-optimization-techniques"
-heroImage: "/images/performance-optimization.jpg"
+heroImage: "https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # 10 Web Performance Optimization Techniques in 2024
