--- a/src/content/blog/fr/api-rest-bonnes-pratiques.mdx
+++ b/src/content/blog/fr/api-rest-bonnes-pratiques.mdx
@@ -1,12 +1,12 @@
 ---
-title: "APIs REST : Guide des Bonnes Pratiques pour Développeurs"
-description: "Maîtrisez les bonnes pratiques pour concevoir des APIs REST robustes, sécurisées et facilement maintenables."
-pubDate: 2024-02-10
-author: "Thomas Rousseau"
+title: "API REST : Bonnes Pratiques et Patterns Modernes"
+description: "Guide complet des bonnes pratiques pour concevoir des API REST robustes, sécurisées et maintenables."
+pubDate: 2024-02-20
+author: "Pierre Moreau"
 lang: "fr"
-translationId: "rest-api-best-practices"
+translationId: "550e8400-e29b-41d4-a716-446655440005"
 canonicalSlug: "api-rest-bonnes-pratiques"
-heroImage: "/images/rest-api-practices.jpg"
+heroImage: "https://images.unsplash.com/photo-1518186285589-2f7649de83e0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # APIs REST : Guide des Bonnes Pratiques pour Développeurs
