--- a/src/content/blog/fr/optimisation-performance-web.mdx
+++ b/src/content/blog/fr/optimisation-performance-web.mdx
@@ -1,12 +1,12 @@
 ---
-title: "10 Techniques d'Optimisation des Performances Web en 2024"
+title: "Optimisation des Performances Web : Techniques et Bonnes Pratiques"
 description: "Découvrez les meilleures techniques pour optimiser les performances de votre site web et améliorer l'expérience utilisateur."
-pubDate: 2024-02-01
-author: "Léa Martin"
+pubDate: 2024-02-10
+author: "Marc Leblanc"
 lang: "fr"
-translationId: "web-performance-optimization"
+translationId: "550e8400-e29b-41d4-a716-446655440003"
 canonicalSlug: "optimisation-performance-web"
-heroImage: "/images/performance-optimization.jpg"
+heroImage: "https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=600&q=80"
 ---
 
 # 10 Techniques d'Optimisation des Performances Web en 2024
